revision du code css

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <meta charset="utf-8"> 
 <link href="https://fonts.googleapis.com/css?family=Patrick+Hand|Permanent+Marker&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-<link rel="stylesheet" href="style3.css">
+<link rel="stylesheet" href="style.css">
 <title>Portfolio</title>
 </head>
 <body>
 <div id="title" class="slide header">
   <div class="Wild"><a href="https://www.wildcodeschool.com/fr-FR"><img src="https://i.imgur.com/0t3TIKK.png"></a></div>
-  <h1>Portfolio</h1>
-  <h2>Portfolio Campus</h2>
+  <h1>Portfolio Campus</h1>
+  <h2>Promotion DevSept2019</h2>
 </div>
 <!--Début du code pour le parallax-->
   <!--Page 1-->
